dev: added comments for models; edited swag desc; sorted imports
